# cpp-playground

./: README.md
container-with-most-water/: .clangd  .gitignore  CMakeLists.txt  README.md
container-with-most-water/src/: result.h  solution.cc  solution.h
container-with-most-water/tests/: solution_test.cc
game-of-life-sdl3/: CMakeLists.txt  README.md
game-of-life-sdl3/src/: Game.cpp  Game.hpp  Grid.cpp  Grid.hpp  main.cpp
